Gap Related Issues Resolved

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@
     padding-left: 180px;
     padding-right: 180px;
     padding-top: 60px;
+    gap: 20px;
 
 }
 
